Правка документации
