# app/Http/Controllers/Controller.php
@@ -8,6 +8,13 @@ namespace App\Http\Controllers;
  *      title="Meat swagger documentation",
  *      description="Test project meat-facture",
  * )
- *
+ * 
+ * @OA\SecurityScheme(
+ *     securityScheme="bearerAuth",
+ *     type="http",
+ *     scheme="bearer",
+ *     bearerFormat="JWT",
+ *     description="Enter JWT token in format: **Bearer {token}**"
+ * )
  */
 abstract class Controller {}
